@@ -24,7 +24,7 @@ CREATE TABLE test_table
   (C CHAR(10) NOT NULL,
    V VARCHAR2(20),
    N NUMBER(10, 2),
-   D1 DATE, D2 DATE, D3 DATE,
+   D1 DATE, D2 DATE, D3 DATE, D4 DATE,
    INT NUMBER(30), BIGNUM NUMBER(30))
 STORAGE (
    INITIAL 4k
@@ -34,23 +34,24 @@ STORAGE (
    PCTINCREASE 0)
 EOS
     @conn.exec(sql)
-    cursor = @conn.parse("INSERT INTO test_table VALUES (:C, :V, :N, :D1, :D2, :D3, :INT, :BIGNUM)")
+    cursor = @conn.parse("INSERT INTO test_table VALUES (:C, :V, :N, :D1, :D2, :D3, :D4, :INT, :BIGNUM)")
     1.upto(10) do |i|
       if i == 1
 	dt = [nil, OraDate]
       else
 	dt = OraDate.new(2000 + i, 8, 3, 23, 59, 59)
       end
-      cursor.exec(format("%10d", i * 10), i.to_s, i, dt, dt, dt, i, i)
+      cursor.exec(format("%10d", i * 10), i.to_s, i, dt, dt, dt, dt, i, i)
     end
     cursor.close
     cursor = @conn.parse("SELECT * FROM test_table ORDER BY c")
     cursor.define(5, Time) # define 5th column as Time
     cursor.define(6, Date) # define 6th column as Date
-    cursor.define(7, Integer) # define 7th column as Integer
-    cursor.define(8, Bignum) # define 8th column as Integer
+    cursor.define(7, DateTime) # define 7th column as DateTime
+    cursor.define(8, Integer) # define 8th column as Integer
+    cursor.define(9, Bignum) # define 9th column as Bignum
     cursor.exec
-    assert_equal(["C", "V", "N", "D1", "D2", "D3", "INT", "BIGNUM"], cursor.get_col_names)
+    assert_equal(["C", "V", "N", "D1", "D2", "D3", "D4", "INT", "BIGNUM"], cursor.get_col_names)
     1.upto(10) do |i|
       rv = cursor.fetch
       assert_equal(format("%10d", i * 10), rv[0])
@@ -60,14 +61,16 @@ EOS
 	assert_nil(rv[3])
 	assert_nil(rv[4])
 	assert_nil(rv[5])
+	assert_nil(rv[6])
       else
 	dt = OraDate.new(2000 + i, 8, 3, 23, 59, 59)
 	assert_equal(dt, rv[3])
 	assert_equal(dt.to_time, rv[4])
 	assert_equal(dt.to_date, rv[5])
+	assert_equal(dt.to_datetime, rv[6])
       end
-      assert_equal(i, rv[6])
       assert_equal(i, rv[7])
+      assert_equal(i, rv[8])
     end
     assert_nil(cursor.fetch)
     cursor.close
